<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
   <groupId>com.k4m</groupId> 
   <artifactId>eXperDB-Management-WebConsole</artifactId>
   <packaging>war</packaging>
   <version>v1.0</version>
   <name>eXperDB-Management-WebConsole</name>
   <url>http://www.egovframe.go.kr</url>

   <properties>
       <spring.maven.artifact.version>4.1.2.RELEASE</spring.maven.artifact.version>
      <egovframework.rte.version>3.6.0</egovframework.rte.version>
   </properties>

   <repositories>
      <repository>
         <id>mvn2</id>
         <url>http://repo1.maven.org/maven2/</url>
         <releases>
            <enabled>true</enabled>
         </releases>
         <snapshots>
            <enabled>true</enabled>
         </snapshots>
      </repository>
      <repository>
         <id>egovframe</id>
         <url>http://www.egovframe.go.kr/maven/</url>
         <releases>
            <enabled>true</enabled>
         </releases>
         <snapshots>
            <enabled>false</enabled>
         </snapshots>
      </repository>
      <repository>
         <id>egovframe2</id>
         <url>http://maven.egovframe.kr:8080/maven/</url>
         <releases>
            <enabled>true</enabled>
         </releases>
         <snapshots>
            <enabled>false</enabled>
         </snapshots>
      </repository>
   </repositories>

   <dependencies>
      <!-- 표준프레임워크 실행환경 -->
        <dependency>
          <groupId>egovframework.rte</groupId>
          <artifactId>egovframework.rte.ptl.mvc</artifactId>
          <version>${egovframework.rte.version}</version>
          <exclusions>
             <exclusion>
                <artifactId>commons-logging</artifactId>
                <groupId>commons-logging</groupId>
             </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>egovframework.rte</groupId>
          <artifactId>egovframework.rte.psl.dataaccess</artifactId>
          <version>${egovframework.rte.version}</version>
        </dependency>
        <dependency>
         <groupId>egovframework.rte</groupId>
         <artifactId>egovframework.rte.fdl.idgnr</artifactId>
         <version>${egovframework.rte.version}</version>
      </dependency>
          <dependency>
         <groupId>egovframework.rte</groupId>
         <artifactId>egovframework.rte.fdl.property</artifactId>
         <version>${egovframework.rte.version}</version>
      </dependency>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.bat.core</artifactId>
			<version>3.1.0</version>
		</dependency>
        <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
          <scope>provided</scope>
          <version>2.5</version>
        </dependency>

        <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>jstl</artifactId>
          <version>1.2</version>
        </dependency>

        <dependency>
          <groupId>taglibs</groupId>
          <artifactId>standard</artifactId>
          <version>1.1.2</version>
        </dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		
      <dependency>
           <groupId>org.antlr</groupId>
           <artifactId>antlr</artifactId>
           <version>3.5</version>
         </dependency>

      <dependency>
         <groupId>org.hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
         <version>2.3.2</version>
      </dependency>
       
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.3.1</version>
      </dependency>
      
		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>4.1.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>4.1.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
			<version>4.1.2.RELEASE</version>
		</dependency>
		
      <!-- Jackson Mapper -->
      <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
         <version>1.9.13</version>
      </dependency>
      
    <dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-core</artifactId>
	    <version>2.9.9</version>
    </dependency>
    
    
    <dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>2.9.9</version>
	</dependency>
      
      <!-- json simple -->
      <dependency>
         <groupId>com.googlecode.json-simple</groupId>
         <artifactId>json-simple</artifactId>
         <version>1.1.1</version>
      </dependency>
      
      <!-- tiles 설정 -->
      <dependency>
         <groupId>org.apache.tiles</groupId>
         <artifactId>tiles-extras</artifactId>
         <version>3.0.5</version>
      </dependency>

      <dependency>
         <groupId>org.apache.tiles</groupId>
         <artifactId>tiles-jsp</artifactId>
         <version>3.0.5</version>
      </dependency>
      
      <dependency>
         <groupId>org.apache.tiles</groupId>
         <artifactId>tiles-core</artifactId>
         <version>3.0.5</version>
      </dependency>
      <!-- /tiles 설정 -->
      
      <!-- excel 설정 -->
      <dependency>
          <groupId>org.apache.poi</groupId>
          <artifactId>poi-ooxml</artifactId>
          <version>3.13</version>
      </dependency>
      <dependency>
		 <groupId>org.apache.poi</groupId>
		 <artifactId>poi</artifactId>
		 <version>3.13</version>
	</dependency>    

	<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
	<dependency>
	    <groupId>commons-codec</groupId>
	    <artifactId>commons-codec</artifactId>
	    <version>1.10</version>
	</dependency>

	<!-- Scheduling -->
	<dependency>
	    <groupId>org.quartz-scheduler</groupId>
	    <artifactId>quartz</artifactId>
	    <version>2.2.1</version>
	    <exclusions>
	        <exclusion>
	            <artifactId>slf4j-api</artifactId>
	            <groupId>org.slf4j</groupId>
	        </exclusion>
	    </exclusions>
	</dependency>
	<dependency>
	    <groupId>org.quartz-scheduler</groupId>
	    <artifactId>quartz-jobs</artifactId>
	    <version>2.2.1</version>
	</dependency>
	<!-- Scheduling end-->
		
	<dependency>
	    <groupId>org.springframework.batch</groupId>
	    <artifactId>spring-batch-core</artifactId>
	    <version>3.0.7.RELEASE</version>
	</dependency>
		
      <!-- /excel 설정 -->
      
        <!-- mysql이나 oracle 필요시 사용 -->
        <!-- <dependency>
            <groupId>com.googlecode.log4jdbc</groupId>
            <artifactId>log4jdbc</artifactId>
            <version>1.2</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.31</version>
        </dependency>

		<dependency>
			<groupId>ojdbc</groupId>
			<artifactId>ojdbc</artifactId>
			<version>6</version>
		</dependency> -->
        
     <dependency>
	    <groupId>org.postgresql</groupId>
	    <artifactId>postgresql</artifactId>
	    <version>9.4-1204-jdbc41</version>
	</dependency>

      <!-- mybatis -->
      <dependency>
         <groupId>org.mybatis</groupId>
         <artifactId>mybatis</artifactId>
         <version>3.2.4</version>
      </dependency>
      <!-- mybatis-spring -->
      <dependency>
         <groupId>org.mybatis</groupId>
         <artifactId>mybatis-spring</artifactId>
         <version>1.2.1</version>
      </dependency>

	<!-- https://mvnrepository.com/artifact/org.jasypt/jasypt -->
	<dependency>
	    <groupId>org.jasypt</groupId>
	    <artifactId>jasypt-spring3</artifactId>
	    <version>1.9.2</version>
	</dependency>

	<dependency>
		<groupId>org.apache.httpcomponents</groupId>
		<artifactId>httpclient</artifactId>
		<version>4.5.3</version>
	</dependency>
	
	<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.2.3</version>
			<classifier>jdk13</classifier>
			<scope>compile</scope>
	</dependency>
	
	<dependency>
	    <groupId>joda-time</groupId>
	    <artifactId>joda-time</artifactId>
	    <version>2.9.9</version>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-csv</artifactId>
	    <version>1.5</version>
	</dependency>
	
	
	<!-- PostgreSQL JDBC -->
		<!-- <dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.5</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/postgresql-42.2.5.jar</systemPath>
		</dependency> -->
		
			<!-- Oracle SDO API -->
		<dependency>
			<groupId>oracle.spatial</groupId>
			<artifactId>geometry.sdoapi</artifactId>
			<version>11.2</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/geometry.sdoapi-11.2.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>oracle.spatial</groupId>
			<artifactId>type</artifactId>
			<version>11.2</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/type-11.2.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>oracle.spatial</groupId>
			<artifactId>util</artifactId>
			<version>11.2</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/util-11.2.jar</systemPath>
		</dependency>
		
		
		<!-- Oracle -->
		<dependency>
			<groupId>ojdbc</groupId>
			<artifactId>ojdbc</artifactId>
			<version>6</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/ojdbc-6.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>ojdbc</groupId>
			<artifactId>xdb</artifactId>
			<version>6</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/xdb-6.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>xmlparserv2</groupId>
			<artifactId>xmlparserv2</artifactId>
			<version>11.1.0.6</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/xmlparserv2-11.1.0.6.jar</systemPath>
		</dependency>
		
		<dependency>
			<groupId>orai18n</groupId>
			<artifactId>orai18n</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/orai18n-1.jar</systemPath>
		</dependency>
				
		<!-- PostGIS JDBC -->
		<dependency>
			<groupId>org.postgis</groupId>
			<artifactId>postgis-jdbc</artifactId>
			<version>master.2017.07.18</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/postgis-jdbc-master.2017.07.18.jar</systemPath>
		</dependency>

		<!-- DB2 -->
		<dependency>
			<groupId>db2jcc4</groupId>
			<artifactId>db2jcc4</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/db2jcc4-1.jar</systemPath>
		</dependency>
		
		<!-- MS-SQL -->
		<dependency>
			<groupId>sqljdbc41</groupId>
			<artifactId>sqljdbc41</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/sqljdbc41-1.jar</systemPath>
		</dependency>
		
		<!-- Tibero -->
		<dependency>
			<groupId>tibero5-jdbc</groupId>
			<artifactId>tibero5-jdbc</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/tibero5-jdbc-1.jar</systemPath>
		</dependency>
		
		<!-- MySQL -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.44</version>
		</dependency>
	
		<!-- CUBRID -->	
		<dependency>
			<groupId>cubrid</groupId>
			<artifactId>cubrid-jdbc</artifactId>
			<version>9.3.6.0002</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/jar/cubrid-jdbc-9.3.6.0002.jar</systemPath>
		</dependency>
		
		<!-- MariaDB -->	
		<dependency>
		    <groupId>org.mariadb.jdbc</groupId>
		    <artifactId>mariadb-java-client-jre7</artifactId>
		    <version>1.6.1</version>
		</dependency>
		
		<dependency>
		    <groupId>com.jcraft</groupId>
		    <artifactId>jsch</artifactId>
		    <version>0.1.55</version>
		</dependency>
		
		<!-- <dependency>
		    <groupId>ch.ethz.ganymed</groupId>
		    <artifactId>ganymed-ssh2</artifactId>
		    <version>262</version>
		</dependency> -->
		
		
   </dependencies>
   	
   <build>
        <defaultGoal>install</defaultGoal>
        <directory>${basedir}/target</directory>
        <finalName>${artifactId}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                   <groupId>org.apache.tomcat.maven</groupId>
                   <artifactId>tomcat7-maven-plugin</artifactId>
                   <version>2.2</version>
                   <configuration>
                       <port>80</port>
                       <path>/</path>
                       <systemProperties>
                           <JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
                       </systemProperties>
                   </configuration>
               </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.7</source>
                        <target>1.7</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>hibernate3-maven-plugin</artifactId>
                    <version>2.1</version>
                    <configuration>
                        <components>
                            <component>
                                <name>hbm2ddl</name>
                                <implementation>annotationconfiguration</implementation>
                            </component>
                        </components>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.hsqldb</groupId>
                            <artifactId>hsqldb</artifactId>
                            <version>2.3.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <!-- EMMA -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>emma-maven-plugin</artifactId>
                    <version>1.0-alpha-3</version>
                </plugin>
                <!-- PMD manven plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- EMMA -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                    <forkMode>once</forkMode>
                    <reportFormat>xml</reportFormat>
                    <excludes>
                        <exclude>**/Abstract*.java</exclude>
                        <exclude>**/*Suite.java</exclude>
                    </excludes>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>emma-maven-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
            <!-- JavaDoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <outputDirectory>${basedir}/target/site</outputDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.7</version>
                <reportSets>
                    <reportSet>
                        <id>sunlink</id>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                        <inherited>true</inherited>
                        <configuration>
                            <links>
                                <link>http://docs.oracle.com/javase/6/docs/api/</link>
                            </links>
                        </configuration>
                    </reportSet>
                </reportSets>
            </plugin>
            <!-- JUnit Test Results & EMMA Coverage Reporting -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>emma-maven-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>surefire-report-maven-plugin</artifactId>
                <inherited>true</inherited>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report-only</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <!-- Generating JavaDoc Report -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <minmemory>128m</minmemory>
                    <maxmemory>512m</maxmemory>
                    <encoding>${encoding}</encoding>
                    <docencoding>${encoding}</docencoding>
                    <charset>${encoding}</charset>
                </configuration>
            </plugin>
            <!-- Generating Java Source in HTML -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <configuration>
                    <inputEncoding>${encoding}</inputEncoding>
                    <outputEncoding>${encoding}</outputEncoding>
                    <linkJavadoc>true</linkJavadoc>
                    <javadocDir>apidocs</javadocDir>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>